@@ -1,3 +1,10 @@
+2018-01-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uniblock.c: Update references Unicode blocks Blocks-10.0.0.txt
+	and CMap files.
+	* COPYRIGHT: Update copyright years.
+	* version.h: Bump version.
+
 2017-08-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* makejvf.1: Updated manual based on version 20170828.
